ajout type prod

--- a/views/type.xml
+++ b/views/type.xml
@@ -14,7 +14,7 @@
     </record>
 
 <!-- Vue pour ajout de nouveau type -->
-<record id="product_type_form_view" model="ir.ui.view">
+<!--<record id="product_type_form_view" model="ir.ui.view">
             <field name="name">product.type.form</field>
             <field name="model">product.type</field>
             <field name="arch" type="xml">
@@ -25,11 +25,11 @@
                 </form>
             </field>
 </record>
-
+-->
 <!-- product.type ne fonctionne pas comme res_model-->
 <!-- avec un res_model existant product.product fonctionne-->
 <!-- Menu pour ajouter des types de produit-->
-	<record id="product_product_type_action" model="ir.actions.act_window"> 
+<!--	<record id="product_product_type_action" model="ir.actions.act_window"> 
             <field name="name">Hacyrak - Type de produit</field>
             <field name="res_model">product.type</field>
             <field name="view_mode">form</field>
@@ -37,4 +37,5 @@
         </record>
 	<menuitem id = "prod_type_main" name="Type prod" />
         <menuitem action="product_product_type_action" id="menu_product_product_type_conf" parent="product.prod_config_main" />
+-->
 </odoo>
